--patch-module and --add-exports are also passed to javac